--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
